CHANGES:

- added Eldritch Initiate feat
- refactored Metamagic feat to be on par with tabletop

