@@ -14,7 +14,7 @@
   "specialDuration": true,
   "durationType": "Round",
   "durationParameterDie": "D1",
-  "durationParameter": 1,
+  "durationParameter": 2,
   "forceTurnOccurence": false,
   "turnOccurence": "EndOfTurn",
   "specialInterruptions": [],
@@ -264,13 +264,13 @@
   "guiPresentation": {
     "$type": "GuiPresentation, Assembly-CSharp",
     "hidden": false,
-    "title": "Rules/&ConditionHinderedTitle",
-    "description": "Rules/&ConditionHinderedDescription",
+    "title": "Condition/&ConditionFightingStyleCripplingTitle",
+    "description": "Condition/&ConditionFightingStyleCripplingDescription",
     "spriteReference": {
       "$type": "UnityEngine.AddressableAssets.AssetReferenceSprite, Unity.Addressables",
-      "m_AssetGUID": "57125544a666ad64195b2eddc133deb4",
-      "m_SubObjectName": "RayOfFrostConditionHindered",
-      "m_SubObjectType": "UnityEngine.Sprite, UnityEngine.CoreModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null"
+      "m_AssetGUID": "",
+      "m_SubObjectName": null,
+      "m_SubObjectType": null
     },
     "color": {
       "$type": "UnityEngine.Color, UnityEngine.CoreModule",
