@@ -1,5 +1,15 @@
 ﻿CHANGES:
 
+1.4.33.13:
+
+- changed Way of The Dragon breath uses to proficiency bonus
+- enforced min level 2 to take Eldritch Adept feat
+- enforced min level 3 to take Metamagic Adept feat
+- fixed Crippling condition title and description
+- fixed Ki and Smites toggle logic preventing use of these powers
+- fixed Way of The Dragon dragon fury duration
+- tweaked monsters / NPCs offering on DMP
+
 1.4.33.12:
 
 - added Eldritch Initiate feat
